# pulse

./: AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
src/pulse/: ai.py  main.py
src/pulse/dashboards/: __init__.py  tech.py  world.py
src/pulse/panels/: __init__.py  economic.py  rss.py  weather.py
src/pulse/widgets/: __init__.py  economic.py  rss.py  stocks.py
