[project]
name = "pulse"
version = "1.0.0"
description = "A personal dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.25.1",
]

[project.scripts]
pulse = "pulse.main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
